--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
+  "repository": {
+	  "type": "git",
+	  "url": "https://github.com/ynoplanetashka2/completion-array.git"
+  },
   "export": {
     ".": {
       "import": "./dist/index.js",
