--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ynoplanetashka/completion-array",
-  "version": "1.0.5",
-  "description": "",
+  "name": "completion-array",
+  "version": "2.0.0",
+  "description": "creates list of switches and invoke callback after all switches get switched",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -31,8 +31,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.2.0",
     "del-cli": "^5.0.0",
     "jest": "^29.2.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
   "files": [
