--- a/tsconfig.json
+++ b/tsconfig.json
@@ -100,5 +100,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "includes": "src/**/*.ts"
+  "includes": "./src/**/*.ts",
+  "exclude": ["**/__tests__", "./dist"]
 }
