--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
   "name": "completion-array",
   "version": "2.0.0",
   "description": "creates list of switches and invoke callback after all switches get switched",
-  "main": "dist/index.js",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
+  "module": "./dist/esm/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ynoplanetashka2/completion-array.git"
   },
   "export": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
     "test": "jest .",
     "test-watch": "npm run test -- --watch",
-    "build": "tsc -p ./tsconfig.json",
+    "build": "npm-run-all -p build:*",
+    "build:cjs": "tsc -p ./tsconfig.cjs.json",
+    "build:esm": "tsc -p ./tsconfig.esm.json",
+    "build:types": "tsc -p ./tsconfig.types.json",
     "build-watch": "npm run build -- --watch",
     "clear": "del-cli ./dist"
   },
@@ -34,6 +39,7 @@
     "@types/jest": "^29.2.0",
     "del-cli": "^5.0.0",
     "jest": "^29.2.1",
+    "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
