--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "completion-array",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "description": "creates list of switches and invoke callback after all switches get switched",
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
@@ -23,7 +23,10 @@
     "build:cjs": "tsc -p ./tsconfig.cjs.json",
     "build:esm": "node ./tools/build-esm.js",
     "build:types": "tsc -p ./tsconfig.types.json",
-    "build-watch": "npm run build -- --watch",
+    "build-watch:cjs": "npm run build:cjs -- --watch",
+    "build-watch:esm": "npm run build:esm -- --watch",
+    "build-watch:types": "npm run build:types -- --watch",
+    "build-watch": "npm-run-all -p build-watch:*",
     "clear": "del-cli ./dist"
   },
   "keywords": [
@@ -38,6 +41,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.0",
     "del-cli": "^5.0.0",
+    "esbuild": "^0.15.12",
     "jest": "^29.2.1",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.3",
