refactor: get backed to using tsc for building esm instead of esbuild

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "creates list of switches and invoke callback after all switches get switched",
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
-  "module": "./dist/esm/index.mjs",
+  "module": "./dist/esm/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ynoplanetashka2/completion-array.git"
   },
   "export": {
     ".": {
-      "import": "./dist/esm/index.mjs",
+      "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js",
       "types": "./dist/types/index.d.ts"
     }
@@ -21,7 +21,7 @@
     "test-watch": "npm run test -- --watch",
     "build": "npm-run-all -p build:*",
     "build:cjs": "tsc -p ./tsconfig.cjs.json",
-    "build:esm": "node ./tools/build-esm.js",
+    "build:esm": "tsc -p ./tsconfig.esm.json",
     "build:types": "tsc -p ./tsconfig.types.json",
     "build-watch:cjs": "npm run build:cjs -- --watch",
     "build-watch:esm": "npm run build:esm -- --watch",
